# autojs6_Management

./: README.md
AutoJs6-master/: .gitignore  settings.gradle.kts  version.properties
AutoJs6-master/app/: build.gradle.kts
AutoJs6-master/app/src/main/: AndroidManifest.xml
AutoJs6-master/app/src/main/java/org/autojs/autojs/: App.kt  AutoJs.kt
AutoJs6-master/app/src/main/java/org/autojs/autojs/core/automator/: GlobalActionAutomator.kt
AutoJs6-master/app/src/main/java/org/autojs/autojs/core/pref/: Pref.kt
AutoJs6-master/app/src/main/java/org/autojs/autojs/network/: ManagementPlatformClient.kt  ManagementPlatformScriptExecutionListener.kt  ManagementPlatformService.kt
AutoJs6-master/app/src/main/java/org/autojs/autojs/ui/error/: ErrorDialogActivity.java
AutoJs6-master/app/src/main/java/org/autojs/autojs/ui/main/: MainActivity.kt
AutoJs6-master/app/src/main/java/org/autojs/autojs/ui/project/: BuildActivity.java
AutoJs6-master/app/src/main/java/org/autojs/autojs/ui/settings/: AboutActivity.kt  ManagementPlatformSecretPreference.kt  ManagementPlatformServerAddressPreference.kt  ManagementPlatformTestConnectionPreference.kt
AutoJs6-master/app/src/main/res/layout/: activity_about.xml  activity_build.xml
AutoJs6-master/app/src/main/res/layout-sw400dp-land/: activity_about.xml
AutoJs6-master/app/src/main/res/values/: strings.xml
AutoJs6-master/app/src/main/res/values-zh/: strings.xml
AutoJs6-master/app/src/main/res/xml/: fragment_preferences.xml
AutoJs6-master/gradle/wrapper/: gradle-wrapper.properties
AutoJs6-master/libs/: utils.build.gradle
AutoJs6-master/libs/paddleocr/: build.gradle
AutoJs6-master/libs/paddleocr/src/main/cpp/: CMakeLists.txt
AutoJs6-master/libs/rapidocr/: build.gradle
